--- a/index.html
+++ b/index.html
@@ -3,12 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio ของน้อง</title>
+    <title>Resume - เอลเลนอร์ ฟิตซ์เจอรัลด์</title>
+
+    <!-- เชื่อมกับไฟล์ CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>สวัสดีค่ะ นี่คือผลงานของหนู</h1>
-    <p>ยินดีต้อนรับเข้าสู่เว็บไซต์ผลงานสำหรับยื่นเข้ามหาวิทยาลัย</p>
-    <img src="my-photo.jpg" alt="รูปของฉัน" width="200" />
+    <div class="container">
+      <div class="top">
+        <div class="left">
+          <div class="profileImg">
+            <div class="profileImg top">
+              <div class="profileImg top left">PROFILE</div>
+              <div class="profileImg top right">ABOUT ME</div>
+            </div>
+            <div class="profileImg bottom">
+              <div class="ImgBg"></div>
+              <img src="./images/profile.png" alt="profile image" />
+            </div>
+          </div>
+          <div class="profileInfo">
+            <div class="section">
+              <div class="title">การศึกษา</div>
+              <div class="desc">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </div>
+            </div>
+            <div class="section">
+              <div class="title">ทักษะความสามารถ</div>
+              <div class="items">
+                <div class="item">
+                  • Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </div>
+                <div class="item">
+                  • Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </div>
+                <div class="item">
+                  • Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <div class="head"></div>
+          <div class="desc"></div>
+          <div class="section"></div>
+          <div class="section"></div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="section">
+          <div class="title">ประสบการณ์ทำงาน</div>
+          <div class="desc">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
